# kaios-calorie-counter

./: .gitignore  README.md
backend/: README.md  prod-release.sh  pyproject.toml
backend/data-prep/: convert_for_kaios_backend.py  convert_for_kaios_local.py  replacement-file.txt  skip_file.txt
backend/lambda/: lambda_function.py
backend/lambda/calorie_api/: admin.py  logger.py  presigned.py  submit.py  utils.py
frontend-v3/: README.md  app.js  index.html  kaios-release.sh  package-lock.json  package.json  playwright.config.js
frontend-v3/css/: header.css  input.css  list.css  loader.css  root.css
frontend-v3/tests/: clear-db.spec.js  diary.spec.js  helpers.js  loading-no-js.spec.js  loading.spec.js  new-food.spec.js  options.spec.js  photo-upload.spec.js  search-ranking.spec.js  search.spec.js  servings.spec.js
frontend-v3/tests/fixtures/: manifest.json  sample-foods.json
s3/: admin.html  manifest.json  release.sh
